opdr8/ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  selector:
    matchLabels:
      app: ping-pong
  replicas: 2
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: ping-pong
        image: ninckblokje/ping-pong:golang
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
spec:
  selector:
    app: ping-pong
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
