opdr8/ping-pong-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ping-pong-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /<namespace>
        backend:
          serviceName: ping-pong
          servicePort: 80
